codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_lists_tools_for_hyphenated_server_names.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • codex-infinity
    • Status: enabled
    • Auth: Unsupported
    • URL: https://codex-infinity.com/api/mcp
    • Tools: (none)
    • Resources: (none)
    • Resource templates: (none)

  • some-server
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: (none)
    • Resource templates: (none)
