codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

  >_ OpenAI Codex (v0.156.1)
     /tmp/project

  Tip: Model just became available
